# sklearn-embeddings

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
tests/: build_model_writeto_disk.ipynb  read_pipeline_from_disk.ipynb
